--- a/assets/main.css
+++ b/assets/main.css
@@ -127,3 +127,26 @@ footer{font-size:0.875em; margin-top:12em; text-align:center;}
     table.footer{font-size:0.33em;}
 }
 
+.column {
+  float: left;
+  width: 50%;
+  vertical-align: middle;
+  padding-left: 10%;
+}
+
+.column-img {
+  float: left;
+  width: 29%;
+  vertical-align: middle;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.vspace{
+  margin-bottom:2cm;
+}
